# vibes

./: .gitignore  CLAUDE.html  CLAUDE.md  CNAME  CONTRIBUTING.md  README.md  _config.yml  index.html
3d-pose-visualizer/: index.html
_includes/: head-custom.html
calibration-studio/: README.md  calibration.js  exclusion-gallery.js  index.html  overlays.js  styles.css  video.js
camera-comparison/: README.md
clip-extractor/: index.html
duplicate-pose-investigator/: README.md
encoding-helper/: README.md
event-annotator/: README.md  index.html
gh-stats/: README.md  index.html
github-discussion-markdown/: README.md
global-track-matcher/: README.md
gpu-dashboard/: README.md  index.html
h5ls/: README.md  index.html  worker.js
hello-world/: README.md  index.html
idle-quest/: README.md
labelroi/: README.md  index.html
laras-labeler/: .gitignore  PLAN.html  PLAN.md  README.md  index.html  pyproject.toml
laras-labeler/scripts/: evaluate_export.py  feature_contribution.py  import_hcm_spout_roi.py  verify_pipeline.py
laras-labeler/src/laras_labeler/: __init__.py  app.py  cli.py  features.py  featurestore.py  hcm_roi.py  jobs.py  labels.py  predict.py  project.py  video.py
laras-labeler/src/laras_labeler/web/: index.html
link-unfurl/: index.html
mdr-labeller/: .gitignore  README.md  config.json  ffmpeg_util.py  render.py  run.sh  server.py  source_approach.py  sources.py
multiview-3d/: README.md  index.html
mv-gui/: PLAN-bugfixes.md  demo-data.js  file-io.js  gsplat-viewer.js  index.html  interaction.js  overlays.js  pose-data.js  styles.css  (+5 more)
(+335 files in other folders)
