[project]
name = "laras-labeler"
version = "0.1.0"
description = "Local, pose-based, human-in-the-loop behavior classifier — a lightweight modern JAABA."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sleap-io>=0.8",
  "movement>=0.17",
  "scikit-learn>=1.5",
  "numpy>=1.26",
  "pandas>=2",
  "pyarrow>=17",
  "joblib>=1.4",
  "pydantic>=2",
  "python-multipart>=0.0.9",
]
# NOTE (see PLAN.md §1): movement 0.17 forces xarray[accel,io,viz]; the `viz` extra pulls
# cartopy -> pyproj (needs the PROJ C lib; no Intel-macOS wheel) and fails to build there.
# numba/llvmlite are NOT the blocker. On platforms where pyproj won't build, install movement's
# core WITHOUT viz: `uv pip install movement --no-deps` + its runtime deps
# (numpy pandas xarray scipy sleap-io attrs pooch tqdm shapely PyYAML loguru orjson bottleneck),
# or add uv dependency overrides for cartopy/pyproj. Verify `import movement` in CI on the target OS.

[project.scripts]
laras-labeler = "laras_labeler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/laras_labeler"]
